--- a/TestAFunctionWithIOClass.ipynb
+++ b/TestAFunctionWithIOClass.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "global ctg\n",
     "from qiskit import ClassicalRegister, QuantumRegister\n",
     "from qiskit import QuantumCircuit, execute,IBMQ\n",
     "from qiskit import Aer\n",
@@ -18,10 +19,10 @@
     "import sys\n",
     "from parseRealization import *\n",
     "%matplotlib inline\n",
-    "global testDir\n",
-    "testDir=\"./tests/\"\n",
+    "\n",
     "#IBMQ.load_accounts()\n",
-    "global ctg"
+    "\n",
+    "testDir=\"./tests/\""
    ]
   },
   {
@@ -100,13 +101,14 @@
     "    print(count)\n",
     "    \n",
     "def testFromFile(fileName,details=0):\n",
-    "    fileName1 = testDir+fileName + \".real\"\n",
-    "    fileName2 = testDir+fileName + \".pla\"\n",
-    "    size = readSizeFromFile(fileName1)\n",
-    "    answers = readKmapFromFile(fileName2)\n",
-    "    errors=[]\n",
     "    ctg = CircuitTransitionGraph()\n",
-    "    ctg = readGatesFromFile(fileName1,ctg)\n",
+    "    ioClass = readCircuitInformation(fileName,ctg) \n",
+    "    size = ctg.getSize()\n",
+    "    answers = ioClass.getKmap()\n",
+    "    print(answers)\n",
+    "    errors=[]\n",
+    "\n",
+    "    ctg = readGatesFromFile(fileName,ctg)\n",
     "    error_count = 0\n",
     "    backend_sim = Aer.get_backend('qasm_simulator')\n",
     "    for i in answers:\n",
@@ -154,8 +156,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SUCCESS\n",
-      "0 16\n"
+      "./tests/test00.pla\n",
+      "hi\n",
+      "['0 1\\n', '1 0\\n']\n",
+      "1\n",
+      "0\n",
+      "{'0': '1', '1': '0'}\n",
+      "0 {'1': 1024}\n",
+      "1 {'0': 1024}\n",
+      "Input:Received:Expected\n",
+      "{'0': '1', '1': '0'}\n",
+      "ERROR: 0\n",
+      "./tests/ham3_28.pla\n",
+      "hi\n",
+      "['# Function: ham3\\n', '# This file have been taken from RevLib (www.revlib.org). \\n', '.i 3\\n', '.o 3\\n', '.ilb a b c\\n', '.ob a b c\\n', '000 000\\n', '001 010\\n', '010 001\\n', '011 100\\n', '100 111\\n', '101 101\\n', '110 110\\n', '111 011\\n', '.e\\n']\n",
+      "000\n",
+      "010\n",
+      "001\n",
+      "100\n",
+      "111\n",
+      "101\n",
+      "110\n",
+      "011\n",
+      "{'000': '000', '001': '010', '010': '001', '011': '100', '100': '111', '101': '101', '110': '110', '111': '011'}\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'ctg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-121930d87ab9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfileName\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtestNames\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mfileName\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtestDir\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfileName\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mfails\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfails\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtestFromFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfileName\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mfails\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SUCCESS\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-289625c6139d>\u001b[0m in \u001b[0;36mtestFromFile\u001b[0;34m(fileName, details)\u001b[0m\n\u001b[1;32m     88\u001b[0m                 \u001b[0mqc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m         \u001b[0mqc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mqr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreadGatesFromCtg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mqr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mctg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m         \u001b[0mqc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmeasure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m         \u001b[0mjob_sim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbackend_sim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#,config)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/QuantumResearch/QuantumGraph/qgraph/parseRealization.py\u001b[0m in \u001b[0;36mreadGatesFromCtg\u001b[0;34m(qc, qr, ctg)\u001b[0m\n\u001b[1;32m    211\u001b[0m             \u001b[0mtarget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvariables\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    212\u001b[0m             \u001b[0;31m#qc.ccx(qr[first],qr[second],qr[target])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 213\u001b[0;31m             \u001b[0mqc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mqr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minsertToffoliGate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mqr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msecond\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    214\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtokens\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"v\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    215\u001b[0m             \u001b[0mvariables\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtokens\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/QuantumResearch/QuantumGraph/qgraph/parseRealization.py\u001b[0m in \u001b[0;36minsertToffoliGate\u001b[0;34m(qc, qr, first, second, target)\u001b[0m\n\u001b[1;32m    146\u001b[0m         \u001b[0mfirst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmyList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    147\u001b[0m         \u001b[0msecond\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmyList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 148\u001b[0;31m     \u001b[0minsertSwaps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mqr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmaximum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    149\u001b[0m     \u001b[0minsertSwaps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mqr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msecond\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmaximum\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    150\u001b[0m     \u001b[0minsertSwaps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mqr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmaximum\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/QuantumResearch/QuantumGraph/qgraph/parseRealization.py\u001b[0m in \u001b[0;36minsertSwaps\u001b[0;34m(qc, qr, first, second)\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m         \u001b[0mk2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m         \u001b[0mctg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodifyWeights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m         \u001b[0mqc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mqr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapplySwap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mqr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mqc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mqr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ctg' is not defined"
      ]
     }
    ],
@@ -167,19 +205,13 @@
     "\n",
     "#testNames=[\"0410184\"]\n",
     "for fileName in testNames:\n",
-    "    fails = fails + testFromFile(fileName)\n",
+    "    fileName = testDir + fileName \n",
+    "    fails = fails + testFromFile(fileName,1)\n",
     "if fails == 0:\n",
     "    print(\"SUCCESS\")\n",
     "print(fails,len(testNames))\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
