--- a/TestAFunctionWithIOClass.ipynb
+++ b/TestAFunctionWithIOClass.ipynb
@@ -171,7 +171,7 @@
       "101 {'101': 1024}\n",
       "110 {'011': 1024}\n",
       "111 {'110': 1024}\n",
-      "Weights are:{'ab': 6, 'bc': 5}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'c', 'b', 'a'}, paths are {},latest weight are[]\n",
+      "Weights are:{'ab': 6, 'bc': 5}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'b', 'a', 'c'}, paths are {},latest weight are[]\n",
       "Input:Received:Expected\n",
       "{'000': '000', '001': '010', '010': '001', '011': '100', '100': '111', '101': '101', '110': '110', '111': '011'}\n",
       "ERROR: 0\n",
@@ -184,7 +184,7 @@
       "101 {'101': 1024}\n",
       "110 {'100': 1024}\n",
       "111 {'111': 1024}\n",
-      "Weights are:{'ab': 14, 'bc': 11}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'c', 'b', 'a'}, paths are {},latest weight are[]\n",
+      "Weights are:{'ab': 14, 'bc': 11}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'b', 'a', 'c'}, paths are {},latest weight are[]\n",
       "Input:Received:Expected\n",
       "{'000': '000', '001': '110', '010': '010', '011': '011', '100': '100', '101': '101', '110': '001', '111': '111'}\n",
       "ERROR: 0\n",
@@ -205,7 +205,7 @@
       "1101 {'1101': 1024}\n",
       "1110 {'1011': 1024}\n",
       "1111 {'1111': 1024}\n",
-      "Weights are:{'cd': 13, 'bc': 12, 'ab': 2}, skeleton is:['cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'ab', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'ab', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd'], vertices are{'c', 'd', 'b', 'a'}, paths are {},latest weight are[]\n",
+      "Weights are:{'cd': 13, 'bc': 12, 'ab': 2}, skeleton is:['cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'ab', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'ab', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd'], vertices are{'b', 'a', 'c', 'd'}, paths are {},latest weight are[]\n",
       "Input:Received:Expected\n",
       "{'0000': '0000', '0001': '1000', '0010': '0001', '0011': '1100', '0100': '0010', '0101': '0101', '0110': '1001', '0111': '1110', '1000': '0100', '1001': '0110', '1010': '1010', '1011': '0111', '1100': '0011', '1101': '1011', '1110': '1101', '1111': '1111'}\n",
       "ERROR: 0\n",
@@ -231,7 +231,7 @@
       "101 {'010': 1024}\n",
       "110 {'011': 1024}\n",
       "111 {'101': 1024}\n",
-      "Weights are:{'ab': 10, 'bc': 8}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'c', 'b', 'a'}, paths are {},latest weight are[]\n",
+      "Weights are:{'ab': 10, 'bc': 8}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'b', 'a', 'c'}, paths are {},latest weight are[]\n",
       "Input:Received:Expected\n",
       "{'000': '111', '001': '000', '010': '001', '011': '011', '100': '100', '101': '010', '110': '110', '111': '101'}\n",
       "ERROR: 0\n",
@@ -275,7 +275,7 @@
       "101 {'100': 1024}\n",
       "110 {'010': 1024}\n",
       "111 {'110': 1024}\n",
-      "Weights are:{'ab': 2, 'bc': 2}, skeleton is:['ab', 'bc', 'bc', 'ab'], vertices are{'c', 'b', 'a'}, paths are {},latest weight are[]\n",
+      "Weights are:{'ab': 2, 'bc': 2}, skeleton is:['ab', 'bc', 'bc', 'ab'], vertices are{'b', 'a', 'c'}, paths are {},latest weight are[]\n",
       "Input:Received:Expected\n",
       "{'000': '100', '001': '101', '010': '110', '011': '111', '100': '000', '101': '001', '110': '010', '111': '011'}\n",
       "ERROR: 0\n",
@@ -288,7 +288,7 @@
       "101 {'111': 1024}\n",
       "110 {'011': 1024}\n",
       "111 {'101': 1024}\n",
-      "Weights are:{'bc': 2}, skeleton is:['bc', 'bc'], vertices are{'c', 'b'}, paths are {},latest weight are[]\n",
+      "Weights are:{'bc': 2}, skeleton is:['bc', 'bc'], vertices are{'b', 'c'}, paths are {},latest weight are[]\n",
       "Input:Received:Expected\n",
       "{'000': '000', '001': '011', '010': '010', '011': '001', '100': '100', '101': '111', '110': '110', '111': '101'}\n",
       "ERROR: 0\n",
@@ -327,7 +327,7 @@
       "101 {'101': 1024}\n",
       "110 {'111': 1024}\n",
       "111 {'011': 1024}\n",
-      "Weights are:{'ab': 4, 'bc': 3}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'c', 'b', 'a'}, paths are {},latest weight are[]\n",
+      "Weights are:{'ab': 4, 'bc': 3}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'b', 'a', 'c'}, paths are {},latest weight are[]\n",
       "Input:Received:Expected\n",
       "{'000': '000', '001': '001', '010': '010', '011': '011', '100': '100', '101': '101', '110': '111', '111': '110'}\n",
       "ERROR: 0\n",
@@ -348,7 +348,7 @@
       "1101 {'1101': 1024}\n",
       "1110 {'1011': 1024}\n",
       "1111 {'1111': 1024}\n",
-      "Weights are:{'bc': 18, 'cd': 13, 'ab': 4}, skeleton is:['bc', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'ab', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'ab', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc'], vertices are{'c', 'd', 'b', 'a'}, paths are {},latest weight are[]\n",
+      "Weights are:{'bc': 18, 'cd': 13, 'ab': 4}, skeleton is:['bc', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'ab', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'ab', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc'], vertices are{'b', 'a', 'c', 'd'}, paths are {},latest weight are[]\n",
       "Input:Received:Expected\n",
       "{'0000': '0000', '0001': '1000', '0010': '0001', '0011': '1100', '0100': '0010', '0101': '0101', '0110': '1001', '0111': '1110', '1000': '0100', '1001': '0110', '1010': '1010', '1011': '0111', '1100': '0011', '1101': '1011', '1110': '1101', '1111': '1111'}\n",
       "ERROR: 0\n",
@@ -361,7 +361,7 @@
       "101 {'101': 1024}\n",
       "110 {'011': 1024}\n",
       "111 {'110': 1024}\n",
-      "Weights are:{'ab': 6, 'bc': 5}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'c', 'b', 'a'}, paths are {},latest weight are[]\n",
+      "Weights are:{'ab': 6, 'bc': 5}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'b', 'a', 'c'}, paths are {},latest weight are[]\n",
       "Input:Received:Expected\n",
       "{'000': '000', '001': '001', '010': '010', '011': '111', '100': '100', '101': '101', '110': '110', '111': '011'}\n",
       "ERROR: 0\n",
