--- a/TestAFunctionWithIOClass.ipynb
+++ b/TestAFunctionWithIOClass.ipynb
@@ -4,30 +4,52 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\marshmallow\\schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
+      "  ChangedInMarshmallow3Warning\n"
+     ]
+    },
+    {
+     "ename": "IBMQAccountError",
+     "evalue": "'No IBMQ credentials found on disk.'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIBMQAccountError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-9b43eeeedc9f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'matplotlib'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'inline'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0mIBMQ\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_accounts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[0mtestDir\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"./tests/\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\qiskit\\providers\\ibmq\\ibmqprovider.py\u001b[0m in \u001b[0;36mload_accounts\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m    189\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    190\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accounts\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 191\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mIBMQAccountError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'No IBMQ credentials found on disk.'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    192\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    193\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mdisable_accounts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIBMQAccountError\u001b[0m: 'No IBMQ credentials found on disk.'"
+     ]
+    }
+   ],
    "source": [
     "from qiskit import ClassicalRegister, QuantumRegister\n",
     "from qiskit import QuantumCircuit, execute,IBMQ\n",
     "from qiskit import Aer\n",
     "from qiskit.tools.visualization import circuit_drawer\n",
     "from qiskit.tools.visualization import plot_histogram\n",
-    "from qiskit import register, available_backends, get_backend\n",
+    "#from qiskit import register, available_backends, get_backend\n",
     "from math import pi\n",
-    "from qiskit.wrapper.jupyter import *\n",
+    "#from qiskit.wrapper.jupyter import *\n",
     "import matplotlib.pyplot as plt\n",
     "import sys\n",
     "global ctg\n",
+    "from qiskit.tools.visualization import circuit_drawer\n",
     "from parseRealization import *\n",
     "%matplotlib inline\n",
     "\n",
-    "#IBMQ.load_accounts()\n",
+    "IBMQ.load_accounts()\n",
     "\n",
     "testDir=\"./tests/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,8 +129,10 @@
     "    errors=[]\n",
     "    size = ioClass.getSize()\n",
     "    ioClass.readGatesFromFile(fileName)\n",
+    "    print (ioClass.getKmap())\n",
     "    error_count = 0\n",
     "    backend_sim = Aer.get_backend('qasm_simulator')\n",
+    "    t = 0\n",
     "    for i in answers:\n",
     "        ctg = CircuitTransitionGraph()\n",
     "        ctg.setSize(size)\n",
@@ -119,7 +143,11 @@
     "            if i[j]==\"1\":\n",
     "                qc.x(qr[j])\n",
     "        qc,qr = ctg.readGatesFromIOClass(qc,qr,ioClass)\n",
+    "        print(qc.qasm())\n",
     "        qc.measure(qr,cr)\n",
+    "        if t == 0:\n",
+    "            circuit_drawer(qc).show()\n",
+    "            t = 1\n",
     "        job_sim = execute(qc, backend_sim)#,config)\n",
     "        stats_sim = job_sim.result().get_counts()\n",
     "        if details==1:\n",
@@ -148,234 +176,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./tests/test00.pla\n",
-      "0 {'1': 1024}\n",
-      "1 {'0': 1024}\n",
-      "Weights are:{}, skeleton is:[], vertices areset(), paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'0': '1', '1': '0'}\n",
-      "ERROR: 0\n",
-      "./tests/ham3_28.pla\n",
-      "000 {'000': 1024}\n",
-      "001 {'010': 1024}\n",
-      "010 {'100': 1024}\n",
-      "011 {'001': 1024}\n",
-      "100 {'111': 1024}\n",
-      "101 {'101': 1024}\n",
-      "110 {'011': 1024}\n",
-      "111 {'110': 1024}\n",
-      "Weights are:{'ab': 6, 'bc': 5}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'b', 'a', 'c'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'000': '000', '001': '010', '010': '001', '011': '100', '100': '111', '101': '101', '110': '110', '111': '011'}\n",
-      "ERROR: 0\n",
-      "./tests/miller.pla\n",
-      "000 {'000': 1024}\n",
-      "001 {'011': 1024}\n",
-      "010 {'010': 1024}\n",
-      "011 {'110': 1024}\n",
-      "100 {'001': 1024}\n",
-      "101 {'101': 1024}\n",
-      "110 {'100': 1024}\n",
-      "111 {'111': 1024}\n",
-      "Weights are:{'ab': 14, 'bc': 11}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'b', 'a', 'c'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'000': '000', '001': '110', '010': '010', '011': '011', '100': '100', '101': '101', '110': '001', '111': '111'}\n",
-      "ERROR: 0\n",
-      "./tests/hwb4_52.pla\n",
-      "0000 {'0000': 1024}\n",
-      "0001 {'0001': 1024}\n",
-      "0010 {'1000': 1024}\n",
-      "0011 {'0011': 1024}\n",
-      "0100 {'0100': 1024}\n",
-      "0101 {'1010': 1024}\n",
-      "0110 {'1001': 1024}\n",
-      "0111 {'0111': 1024}\n",
-      "1000 {'0010': 1024}\n",
-      "1001 {'0110': 1024}\n",
-      "1010 {'0101': 1024}\n",
-      "1011 {'1110': 1024}\n",
-      "1100 {'1100': 1024}\n",
-      "1101 {'1101': 1024}\n",
-      "1110 {'1011': 1024}\n",
-      "1111 {'1111': 1024}\n",
-      "Weights are:{'cd': 13, 'bc': 12, 'ab': 2}, skeleton is:['cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'ab', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'ab', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd'], vertices are{'b', 'a', 'c', 'd'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'0000': '0000', '0001': '1000', '0010': '0001', '0011': '1100', '0100': '0010', '0101': '0101', '0110': '1001', '0111': '1110', '1000': '0100', '1001': '0110', '1010': '1010', '1011': '0111', '1100': '0011', '1101': '1011', '1110': '1101', '1111': '1111'}\n",
-      "ERROR: 0\n",
-      "./tests/testVCVC.pla\n",
-      "000 {'000': 1024}\n",
-      "001 {'100': 1024}\n",
-      "010 {'011': 1024}\n",
-      "011 {'111': 1024}\n",
-      "100 {'001': 1024}\n",
-      "101 {'101': 1024}\n",
-      "110 {'010': 1024}\n",
-      "111 {'110': 1024}\n",
-      "Weights are:{'ab': 6}, skeleton is:['ab', 'ab', 'ab', 'ab', 'ab', 'ab'], vertices are{'b', 'a'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'000': '000', '001': '001', '010': '110', '011': '111', '100': '100', '101': '101', '110': '010', '111': '011'}\n",
-      "ERROR: 0\n",
-      "./tests/3_17.pla\n",
-      "000 {'111': 1024}\n",
-      "001 {'000': 1024}\n",
-      "010 {'100': 1024}\n",
-      "011 {'110': 1024}\n",
-      "100 {'001': 1024}\n",
-      "101 {'010': 1024}\n",
-      "110 {'011': 1024}\n",
-      "111 {'101': 1024}\n",
-      "Weights are:{'ab': 10, 'bc': 8}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'b', 'a', 'c'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'000': '111', '001': '000', '010': '001', '011': '011', '100': '100', '101': '010', '110': '110', '111': '101'}\n",
-      "ERROR: 0\n",
-      "./tests/test01.pla\n",
-      "00 {'00': 1024}\n",
-      "01 {'11': 1024}\n",
-      "10 {'01': 1024}\n",
-      "11 {'10': 1024}\n",
-      "Weights are:{}, skeleton is:[], vertices areset(), paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'00': '00', '01': '11', '10': '10', '11': '01'}\n",
-      "ERROR: 0\n",
-      "./tests/simpleSwap.pla\n",
-      "00 {'00': 1024}\n",
-      "01 {'01': 1024}\n",
-      "10 {'10': 1024}\n",
-      "11 {'11': 1024}\n",
-      "Weights are:{'ab': 1}, skeleton is:['ab'], vertices are{'b', 'a'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'00': '00', '01': '10', '10': '01', '11': '11'}\n",
-      "ERROR: 0\n",
-      "./tests/swap1-2.pla\n",
-      "000 {'000': 1024}\n",
-      "001 {'100': 1024}\n",
-      "010 {'010': 1024}\n",
-      "011 {'110': 1024}\n",
-      "100 {'101': 1024}\n",
-      "101 {'001': 1024}\n",
-      "110 {'111': 1024}\n",
-      "111 {'011': 1024}\n",
-      "Weights are:{'ab': 2}, skeleton is:['ab', 'ab'], vertices are{'b', 'a'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'000': '000', '001': '001', '010': '010', '011': '011', '100': '101', '101': '100', '110': '111', '111': '110'}\n",
-      "ERROR: 0\n",
-      "./tests/swap1-3.pla\n",
-      "000 {'001': 1024}\n",
-      "001 {'101': 1024}\n",
-      "010 {'011': 1024}\n",
-      "011 {'111': 1024}\n",
-      "100 {'000': 1024}\n",
-      "101 {'100': 1024}\n",
-      "110 {'010': 1024}\n",
-      "111 {'110': 1024}\n",
-      "Weights are:{'ab': 2, 'bc': 2}, skeleton is:['ab', 'bc', 'bc', 'ab'], vertices are{'b', 'a', 'c'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'000': '100', '001': '101', '010': '110', '011': '111', '100': '000', '101': '001', '110': '010', '111': '011'}\n",
-      "ERROR: 0\n",
-      "./tests/swap3-2.pla\n",
-      "000 {'000': 1024}\n",
-      "001 {'110': 1024}\n",
-      "010 {'010': 1024}\n",
-      "011 {'100': 1024}\n",
-      "100 {'001': 1024}\n",
-      "101 {'111': 1024}\n",
-      "110 {'011': 1024}\n",
-      "111 {'101': 1024}\n",
-      "Weights are:{'bc': 2}, skeleton is:['bc', 'bc'], vertices are{'b', 'c'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'000': '000', '001': '011', '010': '010', '011': '001', '100': '100', '101': '111', '110': '110', '111': '101'}\n",
-      "ERROR: 0\n",
-      "./tests/test1.pla\n",
-      "000 {'000': 1024}\n",
-      "001 {'100': 1024}\n",
-      "010 {'010': 1024}\n",
-      "011 {'110': 1024}\n",
-      "100 {'001': 1024}\n",
-      "101 {'101': 1024}\n",
-      "110 {'011': 1024}\n",
-      "111 {'111': 1024}\n",
-      "Weights are:{'ab': 2}, skeleton is:['ab', 'ab'], vertices are{'b', 'a'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'000': '000', '001': '001', '010': '010', '011': '011', '100': '100', '101': '101', '110': '110', '111': '111'}\n",
-      "ERROR: 0\n",
-      "./tests/testCVCV.pla\n",
-      "000 {'000': 1024}\n",
-      "001 {'100': 1024}\n",
-      "010 {'010': 1024}\n",
-      "011 {'110': 1024}\n",
-      "100 {'011': 1024}\n",
-      "101 {'111': 1024}\n",
-      "110 {'001': 1024}\n",
-      "111 {'101': 1024}\n",
-      "Weights are:{'ab': 2}, skeleton is:['ab', 'ab'], vertices are{'b', 'a'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'000': '000', '001': '001', '010': '010', '011': '011', '100': '110', '101': '111', '110': '100', '111': '101'}\n",
-      "ERROR: 0\n",
-      "./tests/simpleToffoli.pla\n",
-      "000 {'000': 1024}\n",
-      "001 {'100': 1024}\n",
-      "010 {'010': 1024}\n",
-      "011 {'110': 1024}\n",
-      "100 {'001': 1024}\n",
-      "101 {'101': 1024}\n",
-      "110 {'111': 1024}\n",
-      "111 {'011': 1024}\n",
-      "Weights are:{'ab': 4, 'bc': 3}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'b', 'a', 'c'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'000': '000', '001': '001', '010': '010', '011': '011', '100': '100', '101': '101', '110': '111', '111': '110'}\n",
-      "ERROR: 0\n",
-      "./tests/hwb4_52_mod.pla\n",
-      "0000 {'0000': 1024}\n",
-      "0001 {'0001': 1024}\n",
-      "0010 {'1000': 1024}\n",
-      "0011 {'0011': 1024}\n",
-      "0100 {'0100': 1024}\n",
-      "0101 {'1010': 1024}\n",
-      "0110 {'1001': 1024}\n",
-      "0111 {'0111': 1024}\n",
-      "1000 {'0010': 1024}\n",
-      "1001 {'0110': 1024}\n",
-      "1010 {'0101': 1024}\n",
-      "1011 {'1110': 1024}\n",
-      "1100 {'1100': 1024}\n",
-      "1101 {'1101': 1024}\n",
-      "1110 {'1011': 1024}\n",
-      "1111 {'1111': 1024}\n",
-      "Weights are:{'bc': 18, 'cd': 13, 'ab': 4}, skeleton is:['bc', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'ab', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'ab', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'bc', 'cd', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc'], vertices are{'b', 'a', 'c', 'd'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'0000': '0000', '0001': '1000', '0010': '0001', '0011': '1100', '0100': '0010', '0101': '0101', '0110': '1001', '0111': '1110', '1000': '0100', '1001': '0110', '1010': '1010', '1011': '0111', '1100': '0011', '1101': '1011', '1110': '1101', '1111': '1111'}\n",
-      "ERROR: 0\n",
-      "./tests/toffoli.pla\n",
-      "000 {'000': 1024}\n",
-      "001 {'100': 1024}\n",
-      "010 {'010': 1024}\n",
-      "011 {'111': 1024}\n",
-      "100 {'001': 1024}\n",
-      "101 {'101': 1024}\n",
-      "110 {'011': 1024}\n",
-      "111 {'110': 1024}\n",
-      "Weights are:{'ab': 6, 'bc': 5}, skeleton is:['ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab', 'bc', 'ab'], vertices are{'b', 'a', 'c'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'000': '000', '001': '001', '010': '010', '011': '111', '100': '100', '101': '101', '110': '110', '111': '011'}\n",
-      "ERROR: 0\n",
-      "SUCCESS\n",
-      "0 16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test not\n",
     "\n",
     "testNames=[\"test00\",\"ham3_28\",\"miller\",\"hwb4_52\",\"testVCVC\",\"3_17\",\"test01\",\"simpleSwap\",\"swap1-2\",\"swap1-3\", \"swap3-2\",\"test1\",\"testCVCV\",\"simpleToffoli\",\"hwb4_52_mod\",\"toffoli\"]\n",
     "fails = 0\n",
-    "#testNames=[\"0410184\"]\n",
+    "testNames=[\"testCV\"]\n",
     "for fileName in testNames:\n",
     "    fileName = testDir + fileName \n",
     "    fails = fails + testFromFile(fileName,1)\n",
@@ -388,9 +197,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (QiskitDevenv)",
    "language": "python",
-   "name": "python3"
+   "name": "qiskitdevenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -402,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
