Modified V and Vdag rely on t and h gates instead of rzz. the rzz broke after the 0.6 to 0.7 update

--- a/TestAFunctionWithIOClass.ipynb
+++ b/TestAFunctionWithIOClass.ipynb
@@ -12,18 +12,6 @@
       "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\marshmallow\\schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
       "  ChangedInMarshmallow3Warning\n"
      ]
-    },
-    {
-     "ename": "IBMQAccountError",
-     "evalue": "'No IBMQ credentials found on disk.'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIBMQAccountError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-9b43eeeedc9f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'matplotlib'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'inline'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0mIBMQ\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_accounts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[0mtestDir\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"./tests/\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\qiskit\\providers\\ibmq\\ibmqprovider.py\u001b[0m in \u001b[0;36mload_accounts\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m    189\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    190\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accounts\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 191\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mIBMQAccountError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'No IBMQ credentials found on disk.'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    192\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    193\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mdisable_accounts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIBMQAccountError\u001b[0m: 'No IBMQ credentials found on disk.'"
-     ]
     }
    ],
    "source": [
@@ -49,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,10 +131,11 @@
     "            if i[j]==\"1\":\n",
     "                qc.x(qr[j])\n",
     "        qc,qr = ctg.readGatesFromIOClass(qc,qr,ioClass)\n",
-    "        print(qc.qasm())\n",
+    "\n",
     "        qc.measure(qr,cr)\n",
-    "        if t == 0:\n",
+    "        if t == 0 and details == 1:\n",
     "            circuit_drawer(qc).show()\n",
+    "            print(qc.qasm())\n",
     "            t = 1\n",
     "        job_sim = execute(qc, backend_sim)#,config)\n",
     "        stats_sim = job_sim.result().get_counts()\n",
@@ -161,7 +150,7 @@
     "                error_count = error_count+1\n",
     "    print(ctg)\n",
     "    if error_count != 0 :\n",
-    "        print(\"FAILURE\")\n",
+    "        print(\"FAILURE:\",fileName)\n",
     "    if details==1:\n",
     "        #print(qc.qasm())\n",
     "        #quasmToMatlab(qc.qasm())\n",
@@ -176,15 +165,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./tests/testCVCVdag.pla\n",
+      "{'00': '00', '01': '01', '10': '10', '11': '11'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\qiskit\\tools\\visualization\\_circuit_visualization.py:206: DeprecationWarning: The current behavior for the default output will change in a future release. Instead of trying latex and falling back to mpl on failure it will just use \"text\" by default\n",
+      "  '\"text\" by default', DeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OPENQASM 2.0;\n",
+      "include \"qelib1.inc\";\n",
+      "qreg q0[2];\n",
+      "creg c0[2];\n",
+      "h q0[1];\n",
+      "cx q0[1],q0[0];\n",
+      "t q0[1];\n",
+      "tdg q0[0];\n",
+      "cx q0[1],q0[0];\n",
+      "h q0[1];\n",
+      "t q0[0];\n",
+      "tdg q0[0];\n",
+      "h q0[1];\n",
+      "cx q0[1],q0[0];\n",
+      "t q0[0];\n",
+      "tdg q0[1];\n",
+      "cx q0[1],q0[0];\n",
+      "h q0[1];\n",
+      "measure q0[0] -> c0[0];\n",
+      "measure q0[1] -> c0[1];\n",
+      "\n",
+      "00 {'00': 1024}\n",
+      "01 {'10': 1024}\n",
+      "10 {'01': 1024}\n",
+      "11 {'11': 1024}\n",
+      "Weights are:{'ab': 2}, skeleton is:['ab', 'ab'], vertices are{'a', 'b'}, paths are {},latest weight are[]\n",
+      "Input:Received:Expected\n",
+      "{'00': '00', '01': '01', '10': '10', '11': '11'}\n",
+      "ERROR: 0\n",
+      "SUCCESS\n",
+      "0 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\marshmallow\\schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
+      "  ChangedInMarshmallow3Warning\n"
+     ]
+    }
+   ],
    "source": [
     "#test not\n",
     "\n",
-    "testNames=[\"test00\",\"ham3_28\",\"miller\",\"hwb4_52\",\"testVCVC\",\"3_17\",\"test01\",\"simpleSwap\",\"swap1-2\",\"swap1-3\", \"swap3-2\",\"test1\",\"testCVCV\",\"simpleToffoli\",\"hwb4_52_mod\",\"toffoli\"]\n",
+    "testNames=[\"test00\",\"testCVCVdag\",\"ham3_28\",\"miller\",\"hwb4_52\",\"testVCVC\",\"3_17\",\"test01\",\"simpleSwap\",\"swap1-2\",\"swap1-3\", \"swap3-2\",\"test1\",\"testCVCV\",\"simpleToffoli\",\"hwb4_52_mod\",\"toffoli\"]\n",
     "fails = 0\n",
-    "testNames=[\"testCV\"]\n",
     "for fileName in testNames:\n",
     "    fileName = testDir + fileName \n",
     "    fails = fails + testFromFile(fileName,1)\n",
@@ -193,6 +243,13 @@
     "print(fails,len(testNames))\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
