--- a/TestToffoli.ipynb
+++ b/TestToffoli.ipynb
@@ -2,17 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\qiskit\\providers\\ibmq\\ibmqprovider.py:251: UserWarning: Credentials are already in use.\n",
+      "  warnings.warn('Credentials are already in use.')\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "save_account() missing 1 required positional argument: 'token'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-155fa00afbf0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m#set api\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mIBMQ\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menable_account\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mqx_config\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'APItoken'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mqx_config\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'url'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[0mIBMQ\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave_account\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: save_account() missing 1 required positional argument: 'token'"
+     ]
+    }
+   ],
    "source": [
     "from qiskit import ClassicalRegister, QuantumRegister\n",
     "from qiskit import QuantumCircuit, execute,IBMQ\n",
     "from qiskit import Aer\n",
     "from qiskit.tools.visualization import circuit_drawer\n",
     "from qiskit.tools.visualization import plot_histogram\n",
-    "from qiskit import register, available_backends, get_backend\n",
-    "from qiskit.wrapper.jupyter import *\n",
     "import matplotlib.pyplot as plt\n",
     "from parseRealization import *\n",
     "%matplotlib inline\n",
@@ -21,7 +39,8 @@
     "        \"url\":\"https://quantumexperience.ng.bluemix.net/api\"}\n",
     "\n",
     "#set api\n",
-    "#IBMQ.enable_account(qx_config['APItoken'], qx_config['url'])"
+    "#IBMQ.enable_account()\n",
+    "IBMQ.save_account(qx_config['APItoken'], qx_config['url'])"
    ]
   },
   {
@@ -301,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
