Halfway in the process of  implementing constant inputs and outputs

--- a/TestAFunctionWithIOClass.ipynb
+++ b/TestAFunctionWithIOClass.ipynb
@@ -121,15 +121,10 @@
     "    error_count = 0\n",
     "    backend_sim = Aer.get_backend('qasm_simulator')\n",
     "    t = 0\n",
-    "    for i in answers:\n",
-    "        ctg = CircuitTransitionGraph()\n",
-    "        ctg.setSize(size)\n",
-    "        qr = QuantumRegister(size)\n",
-    "        cr = ClassicalRegister(size)\n",
-    "        qc = QuantumCircuit(qr,cr)\n",
-    "        for j in range(0,size):\n",
-    "            if i[j]==\"1\":\n",
-    "                qc.x(qr[j])\n",
+    "    ctg = CircuitTransitionGraph()\n",
+    "    ctg.setSize(size)\n",
+    "    for i in range(0,len(answers)):\n",
+    "        qr,cr,qc = ioClass.createCircuitAndSetInput(i)\n",
     "        qc,qr = ctg.readGatesFromIOClass(qc,qr,ioClass)\n",
     "\n",
     "        qc.measure(qr,cr)\n",
@@ -140,14 +135,10 @@
     "        job_sim = execute(qc, backend_sim)#,config)\n",
     "        stats_sim = job_sim.result().get_counts()\n",
     "        if details==1:\n",
-    "            # circuit_drawer(qc) won't work, why though\n",
-    "            print(i,stats_sim)\n",
-    "        for release in stats_sim:\n",
-    "            myString = flipTheString(release)\n",
-    "            if myString != answers[i]:\n",
-    "                error = i + \":\" + myString + \":\"+answers[i]\n",
-    "                errors = errors + [error]\n",
-    "                error_count = error_count+1\n",
+    "            print(stats_sim)\n",
+    "        \n",
+    "        ioClass.checkOutputs(stats_sim)\n",
+    "        error_count = error_count+1\n",
     "    print(ctg)\n",
     "    if error_count != 0 :\n",
     "        print(\"FAILURE:\",fileName)\n",
@@ -173,6 +164,8 @@
      "output_type": "stream",
      "text": [
       "./tests/testCVCVdag.pla\n",
+      "The circuit has no garbage lines in it or file parsed incorrectly, check ioclass\n",
+      "The circuit has no constant inputs lines in it or file parsed incorrectly, check ioclass\n",
       "{'00': '00', '01': '01', '10': '10', '11': '11'}\n"
      ]
     },
@@ -209,11 +202,11 @@
       "measure q0[0] -> c0[0];\n",
       "measure q0[1] -> c0[1];\n",
       "\n",
-      "00 {'00': 1024}\n",
-      "01 {'10': 1024}\n",
-      "10 {'01': 1024}\n",
-      "11 {'11': 1024}\n",
-      "Weights are:{'ab': 2}, skeleton is:['ab', 'ab'], vertices are{'a', 'b'}, paths are {},latest weight are[]\n",
+      "{'00': 1024}\n",
+      "{'10': 1024}\n",
+      "{'01': 1024}\n",
+      "{'11': 1024}\n",
+      "Weights are:{'ab': 8}, skeleton is:['ab', 'ab', 'ab', 'ab', 'ab', 'ab', 'ab', 'ab'], vertices are{'b', 'a'}, paths are {},latest weight are[]\n",
       "Input:Received:Expected\n",
       "{'00': '00', '01': '01', '10': '10', '11': '11'}\n",
       "ERROR: 0\n",
@@ -235,6 +228,7 @@
     "\n",
     "testNames=[\"test00\",\"testCVCVdag\",\"ham3_28\",\"miller\",\"hwb4_52\",\"testVCVC\",\"3_17\",\"test01\",\"simpleSwap\",\"swap1-2\",\"swap1-3\", \"swap3-2\",\"test1\",\"testCVCV\",\"simpleToffoli\",\"hwb4_52_mod\",\"toffoli\"]\n",
     "fails = 0\n",
+    "testNames = [\"testCVCVdag\"]\n",
     "for fileName in testNames:\n",
     "    fileName = testDir + fileName \n",
     "    fails = fails + testFromFile(fileName,1)\n",
