--- a/TestAFunctionWithIOClass.ipynb
+++ b/TestAFunctionWithIOClass.ipynb
@@ -41,12 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def flipTheString(s):\n",
-    "    myString=\"\"\n",
-    "    length = len(s)\n",
-    "    for it in range(0,length):\n",
-    "        myString=myString+s[length-1-it]\n",
-    "    return myString\n",
     "\n",
     "def quasmToMatlab(s):\n",
     "    count = 0\n",
@@ -111,7 +105,7 @@
     "    print(count)\n",
     "\n",
     "\n",
-    "def testFromFile(fileName,details=0):\n",
+    "def testFromFile(fileName,details=0,drawPicture=0):\n",
     "    ioClass = readCircuitInformation(fileName) \n",
     "    answers = ioClass.getKmap()\n",
     "    errors=[]\n",
@@ -128,7 +122,7 @@
     "        qc,qr = ctg.readGatesFromIOClass(qc,qr,ioClass)\n",
     "\n",
     "        qc.measure(qr,cr)\n",
-    "        if t == 0 and details == 1:\n",
+    "        if t == 0 and details == 1 and drawPicture == 1:\n",
     "            circuit_drawer(qc).show()\n",
     "            print(qc.qasm())\n",
     "            t = 1\n",
@@ -136,10 +130,9 @@
     "        stats_sim = job_sim.result().get_counts()\n",
     "        if details==1:\n",
     "            print(stats_sim)\n",
-    "        \n",
-    "        ioClass.checkOutputs(stats_sim)\n",
-    "        error_count = error_count+1\n",
-    "    print(ctg)\n",
+    "        error = ioClass.checkOutputs(stats_sim,i)\n",
+    "        error_count = error_count+error\n",
+    "    #print(ctg)\n",
     "    if error_count != 0 :\n",
     "        print(\"FAILURE:\",fileName)\n",
     "    if details==1:\n",
@@ -163,63 +156,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./tests/testCVCVdag.pla\n",
-      "The circuit has no garbage lines in it or file parsed incorrectly, check ioclass\n",
-      "The circuit has no constant inputs lines in it or file parsed incorrectly, check ioclass\n",
-      "{'00': '00', '01': '01', '10': '10', '11': '11'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\qiskit\\tools\\visualization\\_circuit_visualization.py:206: DeprecationWarning: The current behavior for the default output will change in a future release. Instead of trying latex and falling back to mpl on failure it will just use \"text\" by default\n",
-      "  '\"text\" by default', DeprecationWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OPENQASM 2.0;\n",
-      "include \"qelib1.inc\";\n",
-      "qreg q0[2];\n",
-      "creg c0[2];\n",
-      "h q0[1];\n",
-      "cx q0[1],q0[0];\n",
-      "t q0[1];\n",
-      "tdg q0[0];\n",
-      "cx q0[1],q0[0];\n",
-      "h q0[1];\n",
-      "t q0[0];\n",
-      "tdg q0[0];\n",
-      "h q0[1];\n",
-      "cx q0[1],q0[0];\n",
-      "t q0[0];\n",
-      "tdg q0[1];\n",
-      "cx q0[1],q0[0];\n",
-      "h q0[1];\n",
-      "measure q0[0] -> c0[0];\n",
-      "measure q0[1] -> c0[1];\n",
+      "./tests/decod24-v_142.pla\n",
+      "The constants are set to .constants 01--\n",
       "\n",
-      "{'00': 1024}\n",
-      "{'10': 1024}\n",
-      "{'01': 1024}\n",
-      "{'11': 1024}\n",
-      "Weights are:{'ab': 8}, skeleton is:['ab', 'ab', 'ab', 'ab', 'ab', 'ab', 'ab', 'ab'], vertices are{'b', 'a'}, paths are {},latest weight are[]\n",
-      "Input:Received:Expected\n",
-      "{'00': '00', '01': '01', '10': '10', '11': '11'}\n",
-      "ERROR: 0\n",
-      "SUCCESS\n",
-      "0 1\n"
+      "The circuit has no garbage lines in it or file parsed incorrectly, check ioclass\n",
+      "The circuit has constant inputs in it or file parsed incorrectly, check ioclass\n",
+      "{'00': '0001', '01': '0010', '10': '0100', '11': '1000'}\n",
+      "Constant field is: \n",
+      "Length of constants field is: 0\n",
+      "Reached here in preparation of inputs!!!, the inputList is []\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\marshmallow\\schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
-      "  ChangedInMarshmallow3Warning\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-38ffeae8f72c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mfileName\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtestNames\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mfileName\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtestDir\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfileName\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[0mfails\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfails\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mtestFromFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfileName\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mfails\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"SUCCESS\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-2-08152151af4e>\u001b[0m in \u001b[0;36mtestFromFile\u001b[1;34m(fileName, details, drawPicture)\u001b[0m\n\u001b[0;32m     76\u001b[0m     \u001b[0mctg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msetSize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0manswers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 78\u001b[1;33m         \u001b[0mqr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mqc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mioClass\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreateCircuitAndSetInput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     79\u001b[0m         \u001b[0mqc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mqr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mctg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadGatesFromIOClass\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mqc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mqr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mioClass\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\git\\circuit-graph\\inputOutputClass.py\u001b[0m in \u001b[0;36mcreateCircuitAndSetInput\u001b[1;34m(self, number)\u001b[0m\n\u001b[0;32m    138\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Reached here in preparation of inputs!!!, the inputList is\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0minputList\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    139\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 140\u001b[1;33m                 \u001b[1;32mif\u001b[0m \u001b[0minputList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;34m\"1\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    141\u001b[0m                     \u001b[0mqc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mqr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    142\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhasGarbage\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhasConstantInputs\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -228,10 +186,10 @@
     "\n",
     "testNames=[\"test00\",\"testCVCVdag\",\"ham3_28\",\"miller\",\"hwb4_52\",\"testVCVC\",\"3_17\",\"test01\",\"simpleSwap\",\"swap1-2\",\"swap1-3\", \"swap3-2\",\"test1\",\"testCVCV\",\"simpleToffoli\",\"hwb4_52_mod\",\"toffoli\"]\n",
     "fails = 0\n",
-    "testNames = [\"testCVCVdag\"]\n",
+    "testNames = [\"decod24-v_142\"]\n",
     "for fileName in testNames:\n",
     "    fileName = testDir + fileName \n",
-    "    fails = fails + testFromFile(fileName,1)\n",
+    "    fails = fails + testFromFile(fileName,1,0)\n",
     "if fails == 0:\n",
     "    print(\"SUCCESS\")\n",
     "print(fails,len(testNames))\n",
